# Decision-Inteligence-System

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: .env.example  Dockerfile  Makefile  pyproject.toml  render.yaml  run.ps1
backend/monitoring/: prometheus.yml
backend/scripts/: setup_vector_db.py
backend/src/: __init__.py
backend/src/agents/base/: state.py
backend/src/agents/specialized/: research.py  risk.py
backend/src/api/routes/: analyze.py  metrics.py
backend/src/config/: settings.py
backend/src/llm/: embeddings.py  factory.py
backend/src/llm/prompts/: classifier.py  fact_check.py  risk.py
backend/src/observability/: logger.py  tracer.py
backend/src/retrieval/: hybrid_retriever.py  reranker.py
backend/tests/: test_utils.py  test_workflow.py
deployment/docker/: docker-compose.yml
docs/: architecture.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentPipeline.tsx  ReasoningTrace.tsx  ResultCard.tsx
frontend/src/hooks/: useAnalyze.ts
frontend/src/lib/: api.ts
scripts/: seed_data.py
src/: main.py
src/agents/: supervisor.py
src/agents/base/: agent.py
src/agents/specialized/: classifier.py  fact_check.py  financial.py  summary.py
src/api/middleware/: auth.py  logging.py  rate_limit.py
src/api/models/: request.py  response.py
src/config/: constants.py  settings.py
src/llm/: factory.py
src/llm/prompts/: financial.py  research.py  summary.py
src/observability/: metrics.py
src/retrieval/: bm25_search.py  vector_search.py
